Protect user deletion endpoint
